# ark-chatbot

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  start.sh  stop.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: config.py  dependencies.py  main.py  schemas.py
app/routes/: chats.py  messages.py
context_engine/: builder.py  config.py  dedup.py  embedding_service.py  extraction.py  ltm_manager.py  models.py  rag_manager.py  stm_manager.py  tokens.py
db/: models.py  queries.py  session.py
docs/: ark-chatbot-context-engine.md  context-architecture.md  designing-a-chat-context-engine.md  gaps.md  tasks.md
providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py  registry.py  token_counter.py
static/: app.js  index.html  style.css
tests/: conftest.py
tests/api/: test_chats.py  test_episode_trigger.py  test_messages.py
tests/context_engine/: test_builder.py  test_context_window_dedup.py  test_dedup.py  test_embedding_service.py  test_extraction.py  test_extraction_v2.py  test_ltm_manager.py  test_rag_hybrid.py  test_rag_manager.py  test_recency_scoring.py  test_relationship_tracking.py  test_stm_embedding.py  test_stm_manager.py  test_tokens.py
tests/db/: test_hybrid_schema.py  test_models.py  test_queries.py
tests/providers/: test_base.py  test_mock_provider.py  test_registry.py  test_token_counter.py
tests/worker/: test_extraction_handler.py  test_extraction_window.py  (+1 more)
worker/: base.py  episode_handler.py  extraction_handler.py  in_process.py
(+2 files in other folders)
